--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-icons": "^4.11.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/yardobr/copilot-tutorial/issues"
   },
-  "homepage": "https://github.com/yardobr/copilot-tutorial#readme"
+  "homepage": "https://github.com/yardobr/copilot-tutorial#readme",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
